<resources>
    <string name="app_name">Togther</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="account_type">accountType</string>
    <string name="child_acount">Child</string>
    <string name="psycho_acount">Psychologist</string>
    <string name="manager_acount">Manager</string>
    <string name="child">child</string>
    <string name="psycho">psycho</string>
    <string name="manager">manager</string>
    <string name="preference_file_key">prefences</string>
    <string name="check">check</string>
    <string name="action_settings">check2</string>
    <string name="reset_account">Reset Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="posts_fragment_label">Posts</string>
    <string name="feel_fragment_label">Support</string>
    <string name="chat_fragment_label">Chat</string>
    <string name="chat_label">Chat</string>
    <string name="feel_label">Feel</string>
    <string name="posts_label">Posts</string>
    <string name="fragment_creator_key">fragment_creator_key</string>
    <string name="calender_label">Calender</string>
    <string name="support_label">Support</string>
    <string name="statistics_fragment_label">Statistics</string>
    <string name="quotes_fragment_label">Quotes</string>
    <string name="update_fragment_label">Updates</string>
    <string name="keygetfront">key_get_front_posts</string>
    <string name="keygetback">key_get_back_posts</string>
    <string name="getcookie">get_cookie</string>
    <string name="setCookie">set_cookie</string>
    <string name="slash">/</string>
    <string name="request_get_posts_url" translatable="false">http://&ip;:&port;/posts/getPosts</string>
    <string name="request_edit_post_url" translatable="false">http://&ip;:&port;/posts/editPost/</string>
    <string name="request_get_comments_url" translatable="false">http://&ip;:&port;/posts/getComments</string>
    <string name="request_post_posts_url" translatable="false">http://&ip;:&port;/posts/savePost/</string>
    <string name="request_send_comment_url" translatable="false">http://&ip;:&port;/posts/saveComment/</string>
    <string name="request_edit_comment_url" translatable="false">http://&ip;:&port;/posts/editComment</string>
    <string name="request_del_comment_url" translatable="false">http://&ip;:&port;/posts/deleteComment/</string>
    <string name="request_del_post_url" translatable="false">http://&ip;:&port;/posts/deletePost/</string>
    <string name="request_search_posts_url" translatable="false">http://&ip;:&port;/posts/searchPost/</string>
    <string name="request_post_queue_url" translatable="false">http://&ip;:&port;/posts/getPostsQueue/</string>
    <string name="request_get__specific_posts_url" translatable="false">http://&ip;:&port;/posts/getPost/</string>
    <string name="request_save__message_url" translatable="false">http://&ip;:&port;/chat/saveResponse/</string>
    <string name="request_get_messages_url" translatable="false">http://&ip;:&port;/chat/getResponses</string>
    <string name="request_get_children_by_child_last_comment_url" translatable="false">http://&ip;:&port;/chat/queueSortByChildLastMessage/</string>
    <string name="request_get_children_by_psycho_last_comment_url" translatable="false">http://&ip;:&port;/chat/queueSortByPsychoLastMessage/</string>
    <string name="request_user_by_name_url" translatable="false">http://&ip;:&port;/getUser/</string>
    <string name="request_save__user_url" translatable="false">http://&ip;:&port;/updateUser/</string>
    <string name="request_chat_peers_status_url" translatable="false">http://&ip;:&port;/getChatStatus/</string>
    <string name="request_update_status_url" translatable="false">http://&ip;:&port;/updateChatStatus/</string>
    <string name="request_save_shift_url" translatable="false">http://&ip;:&port;/newShift/</string>
    <string name="request_get_approved_shift_url" translatable="false">http://&ip;:&port;/getApprovedShift/</string>
    <string name="request_get_approved_shift_by_psycho_id_url" translatable="false">http://&ip;:&port;/getApprovedShiftByPsychoId/</string>
    <string name="request_del_quote_url" translatable="false">http://&ip;:&port;/deleteQuote/</string>
    <string name="request_edit_quote_url" translatable="false">http://&ip;:&port;/editQuote/</string>
    <string name="request_get_quotes_url" translatable="false">http://&ip;:&port;/getAllQuotes/</string>
    <string name="request_create_quote_url" translatable="false">http://&ip;:&port;/saveNewQuote/</string>
    <string name="request_send_help_request_url" translatable="false">http://&ip;:&port;/helpRequest/</string>
    <string name="request_get_children_by_name_url" translatable="false">http://&ip;:&port;/getChildrenRepresentationByName/</string>
    <string name="request_get_psychologists_by_name_url" translatable="false">http://&ip;:&port;/getPsychologistsRepresentationByName/</string>
    <string name="request_user_general_info_url" translatable="false">http://&ip;:&port;/getUserDetails/</string>
    <string name="request_set_last_login_time_url" translatable="false">http://&ip;:&port;/setLogin/</string>
    <string name="request_reading_qoutes_url" translatable="false">http://&ip;:&port;/readingQuotes/</string>
    <string name="request_destroy_app_url" translatable="false">http://&ip;:&port;/destroyApplication/</string>
    <string name="request_time_statistics_url" translatable="false">http://&ip;:&port;/timeStatistics/</string>
    <string name="request_answered_help_url" translatable="false">http://&ip;:&port;/answeredHelp/</string>
    <string name="request_get_updates_url" translatable="false">http://&ip;:&port;/getUpdates/</string>
    <string name="request_approve_shift_url" translatable="false">http://&ip;:&port;/approveShift/</string>
    <string name="request_update_shift_update_url" translatable="false">http://&ip;:&port;/editUpdate/</string>
    <string name="request_login_req_url" translatable="false">http://&ip;:&port;/login</string>
    <string name="request_approve_login_req_url" translatable="false">http://&ip;:&port;/approvedUser</string>
    <string name="request_get_if_email_exists_url">http://&ip;:&port;/login/</string>
    <string name="request_send_user_url">http://&ip;:&port;/saveUser/</string>
    <string name="request_is_approved_url">http://&ip;:&port;/login/isApproved/</string>
    <string name="request_login_url">http://&ip;:&port;/loginCheck/</string>
    <string name="request_send_password_url">http://&ip;:&port;/login/sendPassword/</string>
    <string name="request_update_conversation_url">http://&ip;:&port;/updateChatStatus/</string>
    <string name="request_mood_change_url">http://&ip;:&port;/setMood/</string>
    <string name="request_get_parent_url">http://&ip;:&port;/login/getParentData/</string>
    <string name="data">data</string>
    <string name="prefs">prefs</string>
    <string name="comment">comment</string>
    <string name="empty" />
    <string name="cookiekey">key_cookie</string>
    <string name="key_post_title">title</string>
    <string name="key_post_message">message</string>
    <string name="key_post_publisher">publisher</string>
    <string name="key_post_publisherID">publisherID</string>
    <string name="key_post_date">date</string>
    <string name="timeformat">EEE MMM dd HH:mm:ss z yyyy</string>
    <string name="key_send_post">key_send_post</string>
    <string name="key_save_post">save:</string>
    <string name="key_get_front_posts">getFront:</string>
    <string name="duration">DURATION</string>
    <string name="shake_prompt">Shaked</string>
    <string name="swipe_down">Swiped down</string>
    <string name="getfront">getFront</string>
    <string name="getback">getBack</string>
    <string name="save">save</string>
    <string name="update">update</string>
    <string name="key_post_id">id</string>
    <string name="seconds">s</string>
    <string name="date_ago">ago</string>
    <string name="mins">m</string>
    <string name="hours">h</string>
    <string name="days">d</string>
    <string name="weeks">weeks</string>
    <string name="months">moths</string>
    <string name="years">years</string>
    <string name="send">send</string>
    <string name="what_do_you_think">what do you think?</string>
    <string name="add_comment">key_add_comment</string>
    <string name="key_comment_message">message</string>
    <string name="key_comment_publisher">publisher</string>
    <string name="key_comment_publisher_id">publisherID</string>
    <string name="key_comment_date">date</string>
    <string name="key_comment_post_id">postID</string>
    <string name="key_comment_id">id</string>
    <string name="comments_front">front</string>
    <string name="comments_back">back</string>
    <string name="fragment_creator_key1">fragment_creator_key1</string>
    <string name="key_edit_comment">key_edit_comment</string>
    <string name="edit">Edit</string>
    <string name="finish">Finish</string>
    <string name="key_del_comment">key_del_comment</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="user">User</string>
    <string name="edit_text">Edit</string>
    <string name="delete_text">Delete</string>
    <string name="key_edit_post">key_edit_post</string>
    <string name="key_del_post">key_del_post</string>
    <string name="post_text">post</string>
    <string name="comment_text">comment</string>
    <string name="public_text">public</string>
    <string name="private_text">private</string>
    <string name="is_public">is_public</string>
    <string name="false_text">false</string>
    <string name="true_text">true</string>
    <string name="loading_new_messages">Loading new Messages</string>
    <string name="loading_posts">Loading Posts</string>
    <string name="loading_gif_1"><![CDATA[https://www.google.co.il/search?client=firefox-b-ab&biw=1280&bih=915&tbm=isch&sa=1&q=loading+gif+transparent&oq=loading+gif+transparent&gs_l=img.3...5261.7352.0.7479.0.0.0.0.0.0.0.0..0.0....0...1c.1.64.img..0.0.0.feqD-6AaN-I#imgdii=szcrEmsYPEjOdM:&imgrc=wp7XdlF06wWumM:]]></string>
    <string name="comments_arrived">comments_arrived</string>
    <string name="empty_array">[]</string>
    <string name="more_comments">more comments</string>
    <string name="comments_arrived_by_user">comments_arrived_by_user</string>
    <string name="no_more_comments">No more comments.</string>
    <string name="text">text</string>
    <string name="key_post_search_result">key_post_search_result</string>
    <string name="choose">choose</string>
    <string name="background_color">background</string>
    <string name="key_color">color</string>
    <string name="key_answered">answered</string>
    <string name="post_answered">Answered.</string>
    <string name="post_to_be_answered">for answer</string>
    <string name="queue_text">queue</string>
    <string name="key_post_queue">key_post_queue</string>
    <string name="post_id">post_id</string>
    <string name="time_text">time</string>
    <string name="author">author</string>
    <string name="add_link">Add link</string>
    <string name="add_image">Add image</string>
    <string name="key_post_image">image</string>
    <string name="key_post_link">link</string>
    <string name="link_text">link</string>
    <string name="loading">Loading..</string>
    <string name="key_comment_image">image</string>
    <string name="key_comment_link">link</string>
    <string name="link_uploaded">Link uploaded</string>
    <string name="login_last_name">last name</string>
    <string name="login_first_name">first name</string>
    <string name="registration_title">Welcome</string>
    <string name="regist_pass">Password</string>
    <string name="regist_email">E-mail</string>
    <string name="regist_submit">Submit</string>
    <string name="regist_exit">Exit</string>
</resources>