<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.weallone.raz.together.Activities.RegistrationActivity"
    android:background="@drawable/background_style_10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView7" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/registration_title"
                    android:textSize="@dimen/meduim_title"
                    android:textStyle="italic|bold"
                    android:id="@+id/textView9"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/small_meduim_margin" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_first_name"
                        android:id="@+id/regist_first_name"
                        android:layout_weight="8"
                        android:layout_margin="@dimen/small_margin" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_last_name"
                        android:id="@+id/regist_last_name"
                        android:layout_weight="8"
                        android:layout_margin="@dimen/small_margin" />
                </LinearLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/regist_email"
                    android:id="@+id/regist_email"
                    android:layout_margin="@dimen/small_margin" />
z
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/regist_pass"
                    android:id="@+id/regist_password"
                    android:layout_margin="@dimen/small_margin" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/registration_char_chooser_frame"></FrameLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/regist_submit"
                    android:id="@+id/regist_submit_btn"
                    android:layout_margin="@dimen/large_margin"
                    android:background="@drawable/button_style_5" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/regist_exit"
        android:layout_margin="@dimen/small_meduim_margin"
        android:textColor="@color/blue_grey"
        android:textStyle="bold"
        android:id="@+id/regist_exit" />
</RelativeLayout>
